<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  <modelVersion>4.0.0</modelVersion>  <groupId>fps.subskipper</groupId>  <artifactId>fps.subskipper</artifactId>  <packaging>pom</packaging>  <version>1.0.0-SNAPSHOT</version>    <modules>    <module>core</module>    <module>RecognitionManualParser</module>    <module>shipDataReader</module>  </modules>  <name>fps.subskipper</name>  <url>http://fsocko.github.io/subskipper/</url>  <properties>    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    <maven.compiler.source>1.8</maven.compiler.source>    <maven.compiler.target>1.8</maven.compiler.target>    <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>    <jacoco.maven.plugin.version>0.8.0</jacoco.maven.plugin.version>    <junit.version>4.13.2</junit.version>    <assertj.version>3.9.0</assertj.version>    <mockito.version>5.2.0</mockito.version>    <log4j.version>2.20.0</log4j.version>    <lombok.version>1.18.26</lombok.version>    <jaxb.version>4.0.1</jaxb.version>  </properties>	<dependencies>    <dependency>      <groupId>org.apache.logging.log4j</groupId>      <artifactId>log4j-api</artifactId>      <version>${log4j.version}</version>    </dependency>    <dependency>      <groupId>org.apache.logging.log4j</groupId>      <artifactId>log4j-core</artifactId>      <version>${log4j.version}</version>  </dependency>    <dependency>      <groupId>org.apache.logging.log4j</groupId>      <artifactId>log4j-slf4j-impl</artifactId>      <version>${log4j.version}</version>    </dependency>      <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->      <dependency>        <groupId>jakarta.xml.bind</groupId>        <artifactId>jakarta.xml.bind-api</artifactId>        <version>${jaxb.version}</version>      </dependency>    <!-- https://mvnrepository.com/artifact/com.x5dev/chunk-templates -->    <dependency>      <groupId>com.x5dev</groupId>      <artifactId>chunk-templates</artifactId>      <version>3.6.2</version>    </dependency>    <dependency>      <groupId>org.projectlombok</groupId>      <artifactId>lombok</artifactId>      <version>${lombok.version}</version>      <scope>provided</scope>    </dependency>    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->    <dependency>      <groupId>com.google.code.gson</groupId>      <artifactId>gson</artifactId>      <version>2.10.1</version>    </dependency>    <dependency>      <groupId>junit</groupId>      <artifactId>junit</artifactId>      <version>${junit.version}</version>      <scope>test</scope>    </dependency>    <dependency>      <groupId>org.assertj</groupId>      <artifactId>assertj-core</artifactId>      <version>${assertj.version}</version>      <scope>test</scope>    </dependency>    <dependency>      <groupId>org.mockito</groupId>      <artifactId>mockito-core</artifactId>      <version>${mockito.version}</version>      <scope>test</scope>    </dependency>    </dependencies></project>